--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.4"
+    "mongoose": "^6.10.0",
+    "node-fetch": "^3.3.1"
   }
 }
